--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "async": "^1.5.2",
     "body-parser": "^1.15.0",
     "cfenv": "1.0.x",
+    "debug": "^2.2.0",
     "express": "4.12.x",
     "hashids": "^1.0.2",
     "jade": "^1.11.0",
     "moment": "^2.11.2",
-    "node-redis": "^0.1.7"
+    "redis": "^2.4.2",
+    "socket.io": "^1.4.5"
   },
   "repository": {
     "type": "git",
