--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "async": "^1.5.2",
     "body-parser": "^1.15.0",
     "cfenv": "1.0.x",
+    "cloudant": "^1.4.1",
     "debug": "^2.2.0",
     "express": "4.12.x",
     "hashids": "^1.0.2",
