--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "body-parser": "^1.15.0",
     "cfenv": "1.0.x",
     "cloudant": "^1.4.1",
+    "connect-redis": "^3.0.2",
     "debug": "^2.2.0",
     "express": "4.12.x",
+    "express-session": "^1.13.0",
     "hashids": "^1.0.2",
     "jade": "^1.11.0",
     "moment": "^2.11.2",
